tests/derive_ui/enum_flatten.stderr
error: `flatten` is usable only with single-typed tuple variants
  --> tests/derive_ui/enum_flatten.rs:14:5
   |
14 | /     #[command(flatten)]
15 | |     Variant1,
   | |____________^
